--- a/Marco_Bispo_Bees_Data_Challenge.ipynb
+++ b/Marco_Bispo_Bees_Data_Challenge.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 1 EDA (Exploratory Data Analysis)"
+    "# A- EDA (Exploratory Data Analysis)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1.1 EDA data description\n",
+    "## A.1 EDA data description\n",
     "### Visualization of data relationships, data types, null and NaN values, duplicates, and unique values present in each column, along with descriptive insights.\n",
     "### Obs.: The **orders** table has the column **dias_since_prior_order**, which is documented with the name **dias_since_prior** in the task pdf, it will be considered the official name present in the table and not in the .pdf doc"
    ]
@@ -790,7 +790,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1.2 EDA data check\n",
+    "## A.2 EDA data check\n",
     "### Quick check to verify if the data descriptions match what is actually present in the dataframe otherwise, cleaning will be necessary.\n",
     "### The description perfectly matches the data being analyzed however, the count of days of the week is starting from zero, for hours it makes sense, but for days not so much, but 7 values ​​are present within the list"
    ]
@@ -844,7 +844,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1.3 Data Visualization:\n",
+    "## A.3 EDA Data Visualization:\n",
     "### Which product had the biggest sales and reordered?\n",
     "#### Bananas and Bananas\n",
     "### Which aisle had the biggest sales and reordered?\n",
@@ -1659,14 +1659,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 2 Statistical analysis"
+    "# B Statistical analysis"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2.1 Descriptive Statistics Statistical graphs\n",
+    "## B.1 Descriptive Statistics Statistical graphs\n",
     "### Notes:\n",
     "#### Nenhuma distribuição é normal\n",
     "#### In the histogram of hours of the day, order dow and days_since_prio_order, a significant peak was observed\n",
@@ -2008,14 +2008,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2.2 Inferential Statistics Hypothesis testing"
+    "## B.2 Inferential Statistics Hypothesis testing"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.2.1 Corelations (spearman):\n",
+    "### B.2.1 Corelations (spearman):\n",
     "#### Notes:\n",
     "#### This test was chosen because spearman is better than pearson for non-normal distributions\n",
     "##### The columns 'reordered', 'order_dow', 'order_hour_of_day', 'days_since_prior_order' have a significant relationship in the spearman test, however very low, only 'reordered' was positive\n",
@@ -2583,7 +2583,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.2.2 Análise de Variância (ANOVA):\n",
+    "### B.2.2 Análise de Variância (ANOVA):\n",
     "#### The variables analyzed (department, day of the week of the order and days since the last order) have a statistically significant impact on sales."
    ]
   },
@@ -2632,7 +2632,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2.3 Inferential Statistics Principal Component Analysis (PCA)\n",
+    "## B.3 Inferential Statistics Principal Component Analysis (PCA)\n",
     "### Notes:\n",
     "#### The sum of the two components resulted in more than **80%**\n",
     "#### Sales and roerdem are 90 degrees in the correlation circle, that is, they have no correlation sales with days_since_prior_order gave the complete opposite, that is, a highly negative correlation, the hours of the day have a very low, but negative, relationship\n",
@@ -2948,7 +2948,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 3 Customer Segmentation: \n",
+    "# 1 Customer Segmentation: \n",
     "## Can you segment customers based on their ordering behavior, such as frequency, time of day, or days since prior order, to better understand their preferences and propose ways to optimize marketing strategies?\n",
     "#### Building a df with clients, involving numerous columns with hotting ecolding, using PCA with the two main components adding up to **78** applying the distance between the point and the straight line to the greatest distance by the curve of the elbow to the distance chosen was 4, or there are **4 types of customers**, and was visualized by kmeans"
    ]
@@ -3519,7 +3519,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 4 Inventory Management:\n",
+    "# 2 Inventory Management:\n",
     "### Inventory Management: Implement a predictive model that estimates inventory levels\n",
     "### for individual products across different departments and aisles, taking into consideration the day of the week and hour. Please note the following points:\n",
     "\n",
@@ -4197,7 +4197,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 5 Order Fulfillment (Bonus points): \n",
+    "# 3 Order Fulfillment (Bonus points): \n",
     "### How can we optimize the order fulfillment process, considering factors like the day of the week and time of day when most orders are placed, to ensure timely and efficient deliveries to customers while minimizing operational costs?\n",
     "\n",
     "### Classificar os produtos em velocidade de compra, estudar as distribuidoras que tem mais fluxo e comparar com as de menores fluxo e estudar comportamentos"
@@ -4526,7 +4526,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#  6 Given the brevity of this exercise:\n",
+    "#  4 Given the brevity of this exercise:\n",
     "## outline the additional work/action items you would take to solve this challenge if you were given 2 additional weeks to complete the assignment.\n",
     "\n",
     "### Bayesian Analysis of Purchase Probability by Time:\n",
