--- a/Marco_Bispo_Bees_Data_Challenge.ipynb
+++ b/Marco_Bispo_Bees_Data_Challenge.ipynb
@@ -1668,7 +1668,7 @@
    "source": [
     "## B.1 Descriptive Statistics Statistical graphs\n",
     "### Notes:\n",
-    "#### Nenhuma distribuição é normal\n",
+    "#### No distribution is normal visually\n",
     "#### In the histogram of hours of the day, order dow and days_since_prio_order, a significant peak was observed\n",
     "#### The median ordering hours are very similar for all departments, logically alcoholic beverages are higher as they are generally sold at dusk\n",
     "#### Looking at the order_dow box plot we can clearly divide the median into two types, in other words, the departments are divided into two types, their median is concentrated either on day two or day 3\n",
