--- a/Marco_Bispo_Bees_Data_Challenge.ipynb
+++ b/Marco_Bispo_Bees_Data_Challenge.ipynb
@@ -2020,12 +2020,12 @@
     "\n",
     "plot_boxplot_by_department(df_order_products_products_aisles_departments_orders,\n",
     "                            \"order_dow\", \"order_hour_of_day\",\n",
-    "                            \"Boxplot of register sales by oder dow and oder hour of day\")\n",
+    "                            \"Boxplot and violin of register sales by oder dow and oder hour of day\")\n",
     "\n",
     "\n",
     "plot_boxplot_by_department(df_user,\n",
     "                            \"order_dow\", \"sales\",\n",
-    "                            \"Boxplot of sales by oder dow\")"
+    "                            \"Boxplot and violin of sales by oder dow\")"
    ]
   },
   {
