--- a/Marco_Bispo_Bees_Data_Challenge.ipynb
+++ b/Marco_Bispo_Bees_Data_Challenge.ipynb
@@ -3847,9 +3847,9 @@
     "df_model_v1\n",
     "\n",
     "\n",
-    "# Criando todas as combinações possíveis de order_dow e order_hour_of_day\n",
-    "order_dows = range(7)  # Dias da semana (0-6)\n",
-    "order_hours = range(24)  # Horas do dia (0-23)\n",
+    "\n",
+    "order_dows = range(7)  \n",
+    "order_hours = range(24)  \n",
     "combinations = pd.DataFrame(list(itertools.product(order_dows, order_hours)), columns=['order_dow', 'order_hour_of_day'])\n",
     "\n",
     "\n",
