--- a/Marco_Bispo_Bees_Data_Challenge.ipynb
+++ b/Marco_Bispo_Bees_Data_Challenge.ipynb
@@ -2636,7 +2636,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### B.2.2 Análise de Variância (ANOVA):\n",
+    "### B.2.2 Analysis of Variance (ANOVA):\n",
     "#### The variables analyzed (department, day of the week of the order and days since the last order) have a statistically significant impact on sales."
    ]
   },
