--- a/Marco_Bispo_Bees_Data_Challenge.ipynb
+++ b/Marco_Bispo_Bees_Data_Challenge.ipynb
@@ -2072,7 +2072,7 @@
     "#### Notes:\n",
     "#### This test was chosen because spearman is better than pearson for non-normal distributions\n",
     "##### The columns 'reordered', 'order_dow', 'order_hour_of_day', 'days_since_prior_order' have a significant relationship in the spearman test, however very low, only 'reordered' was positive\n",
-    "##### The two biggest correlations of the poor lanceiro departments that also passed the significance test were breakfast with frozen foods and dairy eggs with frozen"
+    "##### The two highest departmental correlations were low but also passed without significance testing were breakfast with frozen foods and dairy eggs with frozen foods."
    ]
   },
   {
@@ -3579,11 +3579,11 @@
     "### **!! The model considered that the same day of the month and the same time of the day, I mean these records are unique, as the number of the month and year was not given to me, so a purchase with the same number of the day and at the same time results in a add up to find out the number of products sold !!**\n",
     "\n",
     "### Note 1 - The model should be predictive, not a forecasting model:\n",
-    "#### The predictive model is made up of two submodels: a classification model that decides whether the product will be sold or not, and another prediction model that determines the quantity of the product to be sold. The unique product name is coded according to each product's sales medium. Both submodels utilize day of the week and time variables in addition to the encoded product. It is worth noting that **only products with more than 100 sales** were used in the model.\n",
+    "#### The predictive model is made up of two submodels: a classification model that decides whether the product will be sold or not, and another prediction model that determines the quantity of the product to be sold. The unique product name is coded according to each product's sales average. Both submodels utilize day of the week and time variables in addition to the encoded product. It is worth noting that **only products with more than 100 sales** were used in the model.\n",
     "\n",
     "#### To feed the sales number prediction model, **sales outliers for each product were removed**. Data normalization was not performed due to the short time frame of the project and the fact that tree-based models, such as those used here, generally perform well even without normalization.\n",
     "\n",
-    "#### The first submodel, the DecisionTreeClassifier, has an accuracy of **0.75** for unsold products and **0.87** for sold products. The second submodel, DecisionTreeRegressor, was divided into a list of models according to the product's sales medium. Some products sell a little due to the combination of time and month number, while others sell a lot. This approach helps improve the RMSE (Root Mean Squared Error) of each product by classifying them according to their different sales patterns.\n",
+    "#### The first submodel, the DecisionTreeClassifier, which performed better than the regression model when compared and applied cross validation, has an accuracy of **0.75** for unsold products and **0.87** for sold products. The second submodel, DecisionTreeRegressor, was divided into a list of models according to the average sales of the product. Some products sell little due to the combination of time and number of the month, while others sell a lot. This approach helps improve the RMSE (Root Mean Squared Error) of each product by classifying them according to their different sales patterns.\n",
     "\n",
     "\n",
     "### Note 2 - Explain how this predictive model can be applied to optimize stock levels and minimize waste:\n",
